formulaire de contact avec code php

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <form action="" method="post">
+    <form action="index.php" method="post">
         <h1 id="titre">FORMULAIRE DE CONTACT</h1>
         <div class="conteneur">
-            <input class="conteneur1" type="text" name="" placeholder="Votre nom">
-            <input class="conteneur1" type="text" name="" placeholder="Votre prenom svp">
-            <input class="conteneur1" type="email" name="" placeholder="votre mail">
-            <input class="conteneur1" type="number" name="" placeholder="votre numero de telephone svp">
+            <input class="conteneur1" type="text" name="nom" placeholder="Votre nom">
+            <input class="conteneur1" type="text" name="prenom" placeholder="Votre prenom svp">
+            <input class="conteneur1" type="email" name="email" placeholder="votre mail">
+            <input class="conteneur1" type="number" name="tel" placeholder="votre numero de telephone svp">
             <label for="">Votre message</label>
-            <textarea name="" id="" cols="30" rows="10"></textarea>
+            <textarea name="message" id="" cols="30" rows="10"></textarea>
             <input class="conteneur2" type="submit" value="valider">
         </div>
     </form>
